--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,7 +76,7 @@ html {
 <p>I am <b><i>finally</i></b> getting around to doing something with this site!</p>
 <p>My Grandchildren are starting to encounter HTML related topics in school and this is a great place to host their efforts.</p>
 <p>They can learn the HTML, CSS, JS, etc and have a place to see the results. At the same time they can learn to work with GitHub.<br>
-The containers are <em>EMPTY</em> for the most part.  That's right, merely formatted place holders.
+The linked containers are <em>EMPTY</em> for the most part.  That's right, merely formatted place holders.
 </div>
 
 </div>
