--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Fahey&apos;s Site</title>
+<title>The Faheys Site</title>
 <style>
 * {
     box-sizing: border-box;
