--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Faheys Site</title>
+<title>The Fahey&apos;s Site</title>
 <style>
 * {
     box-sizing: border-box;
@@ -56,7 +56,7 @@ html {
 <body>
 
 <div class="header">
-<h1><img src="images/imageText.jpg" alt="Why?" style="width:15%">&emsp;&emsp; The Faheys</h1>
+<h1><img src="images/imageText.jpg" alt="Why?" style="width:15%">&emsp;&emsp; The Fahey&apos;s Web Site</h1>
 <p>O'Fathaigh translates to Fahey in Irish Galic</p>
 </div>
 
