--- a/checkLinks.html
+++ b/checkLinks.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bob Fahey Site</title>
+<title>Check in page links</title>
 <style>
 * {
     box-sizing: border-box;
