--- a/Idea.html
+++ b/Idea.html
@@ -5,15 +5,15 @@
 function light(sw) {
   var pic;
   if (sw == 0) {
-    pic = "pic_bulboff.png"
+    pic = "images/pic_bulboff.png"
   } else {
-    pic = "pic_bulbon.png"
+    pic = "images/pic_bulbon.png"
   }
   document.getElementById('myImage').src = pic;
 }
 </script>
 
-<img id="myImage" src="pic_bulboff.png" width="100" height="180">
+<img id="myImage" src="images/pic_bulboff.png" width="100" height="180">
 
 <p>
 <button type="button" onclick="light(1)">Light On</button>
