--- a/WDresp/index2.html
+++ b/WDresp/index2.html
@@ -1,1 +1,93 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style2.css">
+   <title>Responsive CSS</title>
+</head>
+<body>
+   <header>
+      <a href="index2.html" class="header-brand">rmf</a>
+      <nav>
+         <ul>
+           <li><a href="#">Projects</a></li>
+           <li><a href="#">Skills</a></li>
+           <li><a href="#">Interests</a></li>
+	 </ul>
+	 <a href="special.html" class="header-spec">Special</a>
+      </nav>
+   </header>
+   <main>
+   <section class="index-banner">
+      <div class="vertical-center">
+         <h2>I AM A ROOKIE WEB<br>DEVELOPER</h2>
+         <h1>with a breath of knowlege a mile wide and an inch deep.</h1>
+      </div>
+   </section>
+   <div class="wrapper">
+   <section class="index-links">
+      <a href="*">
+         <div class="index-square">
+            <h3>Cases</h3>
+         </div>
+      </a>
+      <a href="*">
+         <div class="index-rectangle">
+            <h3>Portfolio</h3>
+         </div>
+      </a>
+      <a href="*">
+         <div class="index-square">
+            <h3>Rmf</h3>
+         </div>
+      </a>
+      <a href="*">
+         <div class="index-rectangle">
+            <h3>YouTube Channel</h3>
+         </div>
+      </a>
+      <a href="*">
+         <div class="index-square">
+            <h3>About</h3>
+         </div>
+      </a>
+      <a href="*">
+         <div class="index-square">
+            <h3>Contacts</h3>
+         </div>
+      </a>
+   </section>
+   </div>
+   </main>
+   <div class="wrapper">
+   <footer>
+      <ul class="footer-links-main">
+         <li><a href="#">Home</a></li>
+         <li><a href="#">Cases</a></li>
+         <li><a href="#">Portfolio</a></li>
+         <li><a href="#">About</a></li>
+         <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <ul class="footer-links-cases">
+	      <li><p>Latest Cases</p></li>
+         <li><a href="#">ABC Wed Development</a></li>
+         <li><a href="#">ABC Wed Development</a></li>
+         <li><a href="#">GHI YouTube</a></li>
+         <li><a href="#">JKL Video Project</a></li>
+      </ul>
+      <div class="footer-sm">
+         <a href="#">
+		 <img src="PNG/Circle Color/Facebook_small.PNG" alt="FB icon">
+         </a>
+         <a href="#">
+		 <img src="PNG/Circle Color/Github_small.PNG" alt="Gh icon">
+         </a>
+         <a href="#">
+		 <img src="PNG/Circle Color/Twitter.PNG" alt="SC icon">
+         </a>
+       </div>
+   </footer>
+   </div>
+</body>
+</html>
