--- a/WDresp/index2.html
+++ b/WDresp/index2.html
@@ -78,13 +78,13 @@
       </ul>
       <div class="footer-sm">
          <a href="#">
-		 <img src="PNG/Circle Color/Facebook_small.PNG" alt="FB icon">
+		 <img src="PNG/Facebook_small.PNG" alt="FB icon">
          </a>
          <a href="#">
-		 <img src="PNG/Circle Color/Github_small.PNG" alt="Gh icon">
+		 <img src="PNG/Github_small.PNG" alt="Gh icon">
          </a>
          <a href="#">
-		 <img src="PNG/Circle Color/Twitter.PNG" alt="SC icon">
+		 <img src="PNG/Twitter.PNG" alt="SC icon">
          </a>
        </div>
    </footer>
