--- a/WDresp/index.html
+++ b/WDresp/index.html
@@ -39,7 +39,7 @@
       </a>
       <a href="*">
          <div class="index-square">
-            <h3>Rmf</h3>
+            <h3>RMF Group</h3>
          </div>
       </a>
       <a href="*">
@@ -54,7 +54,7 @@
       </a>
       <a href="*">
          <div class="index-square">
-            <h3>Contacts</h3>
+            <h3>Contact</h3>
          </div>
       </a>
    </section>
