--- a/WDresp/index.html
+++ b/WDresp/index.html
@@ -39,7 +39,7 @@
       </a>
       <a href="*">
          <div class="index-square">
-            <h3>RMF Group</h3>
+            <h3>RMF<br>Group</h3>
          </div>
       </a>
       <a href="*">
