--- a/index2.html
+++ b/index2.html
@@ -78,10 +78,10 @@
       </ul>
       <div class="footer-sm">
          <a href="#">
-		 <img src="./WDresp/PNG/Circle Color/Facebook_small.PNG" alt="FB icon">
+		 <img src="../WDresp/PNG/Circle Color/Facebook_small.PNG" alt="FB icon">
          </a>
          <a href="#">
-		 <img src="./WDresp/PNG/Circle Color/Github_small.PNG" alt="Gh icon">
+		 <img src="WDresp/PNG/Circle Color/Github_small.PNG" alt="Gh icon">
          </a>
          <a href="#">
 		 <img src="./WDresp/PNG/Circle Color/Twitter.PNG" alt="SC icon">
