--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
 		 <img src="WDresp/PNG/Circle Color/Github_small.PNG" alt="Gh icon">
          </a>
          <a href="#">
-		 <img src="./WDresp/PNG/Circle Color/Twitter.PNG" alt="SC icon">
+		 <img src="Twitter.PNG" alt="SC icon">
          </a>
        </div>
    </footer>
