--- a/index2.html
+++ b/index2.html
@@ -78,13 +78,13 @@
       </ul>
       <div class="footer-sm">
          <a href="#">
-		 <img src="../WDresp/PNG/Circle Color/Facebook_small.PNG" alt="FB icon">
+		 <img src="../WDresp/PNG/Facebook_small.PNG" alt="FB icon">
          </a>
          <a href="#">
-		 <img src="WDresp/PNG/Circle Color/Github_small.PNG" alt="Gh icon">
+		 <img src="WDresp/PNG/Github_small.PNG" alt="Gh icon">
          </a>
          <a href="#">
-		 <img src="Twitter.PNG" alt="SC icon">
+		 <img src="WDresp/Twitter.PNG" alt="SC icon">
          </a>
        </div>
    </footer>
