--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
 		 <img src="WDresp/PNG/Github_small.png" alt="Gh icon">
          </a>
          <a href="#">
-		 <img src="WDresp/PNG/Twitter.PNG" alt="SC icon">
+		 <img src="WDresp/PNG/Twitter.png" alt="SC icon">
          </a>
        </div>
    </footer>
